--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <a href="https://maps.app.goo.gl/MTt9PL75LmhszGq87" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="./invitation/Shruti & Aditya Wedding Invite.pdf" download="Invitation | 31 Dec | Hope to see you there!" target="_blank">
+        <a href="./invitation/Wedding_Invite.pdf" download="Invitation | 31 Dec | Hope to see you there!" target="_blank">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
