--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
    </head>
    <body>
       <!-- partial:index.partial.html -->
-      <!-- <div class="music">
+      <div class="music">
         <audio src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio> 
-      </div> -->
+      </div>
       <div class="sakura-falling"></div>
       <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
       <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
