--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <br>
       <!-- Place this where you want the video player to appear -->
       <div id="video-container">
-        <p style="text-align: center; font-size: 24px;">Experience the live streaming of our wedding in just</p>
+        <p style="text-align: CENTER;font-size: 24px;">Experience the live streaming <br> of our wedding in just</p>
         <div id="countdown" style="text-align: center; font-size: 36px; font-weight: bold;"></div>
         <p style="text-align: center; font-size: 24px;">and share in our joyous celebration!</p>
         <!-- Embed code for the video -->
