--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Are getting married</h3></p>
             <p>
                on <span class="date">31 December 2023</span><br> on, 12:25 pm</31>, 
-               <p>At <span class="place">Vedant Banquet, Plot No.1-X-3, Infront of Shioni Airport, MIDC, Near, Hatti Putla Chowk,</span> Akola, Maharashtra 444001, India.</p>
+               <p>At <span class="place">Vedant Banquet, Plot No.1-X-3, Infront of Shivani Airport, MIDC, Near, Hatti Putla Chowk,</span> Akola, Maharashtra 444001, India.</p>
             </p>
          </div>
       </div>
