--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div id="video-container">
         <p style="text-align: CENTER;font-size: 24px;">Experience the live streaming <br> of our wedding in just</p>
         <div id="countdown" style="text-align: center; font-size: 36px; font-weight: bold;"></div>
-        <p style="text-align: center; font-size: 24px;">and share in our joyous celebration!</p>
+        <p style="text-align: center; font-size: 24px;">and <br> share in our joyous celebration!</p>
         <!-- Embed code for the video -->
         <iframe width="560" height="315" src="https://www.youtube.com/embed/_XI5nhWeT3w" frameborder="0" allowfullscreen></iframe>
       </div>
