--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@
        <!-- Your existing HTML content -->
 
        <footer class="footer">
-         <div class="container">
-             <p class="footer-text">Can't wait to celebrate this special moment with you!</p>   
-             <p class="footer-text">Feel free to reach out for any queries: +91 9823405554</p>
-         </div>
-     </footer>
+        <p class="footer-text">Can't wait to celebrate this special moment with you!</p>
+        <p class="footer-text">Feel free to reach out for any queries: +91 9823405554</p>
+        <p>© 2023 Developed by Shruti Asarkar</p>
+      </footer>
 
    </body>
 </html>
